--- a/.gitmodules
+++ b/.gitmodules
@@ -1,36 +1,36 @@
 [submodule "bundle/Color-Sampler-Pack"]
 	path = bundle/Color-Sampler-Pack
-	url = https://github.com/vim-scripts/Color-Sampler-Pack.git
+	url = git://github.com/vim-scripts/Color-Sampler-Pack.git
 [submodule "bundle/FuzzyFinder"]
 	path = bundle/FuzzyFinder
-	url = https://github.com/vim-scripts/FuzzyFinder.git
+	url = git://github.com/vim-scripts/FuzzyFinder.git
 [submodule "bundle/VimClojure"]
 	path = bundle/VimClojure
-	url = https://github.com/vim-scripts/VimClojure.git
+	url = git://github.com/vim-scripts/VimClojure.git
 [submodule "bundle/ack.vim"]
 	path = bundle/ack.vim
-	url = https://github.com/mileszs/ack.vim.git
+	url = git://github.com/mileszs/ack.vim.git
 [submodule "bundle/autoload_cscope.vim"]
 	path = bundle/autoload_cscope.vim
-	url = https://github.com/vim-scripts/autoload_cscope.vim.git
+	url = git://github.com/vim-scripts/autoload_cscope.vim.git
 [submodule "bundle/cscope_macros.vim"]
 	path = bundle/cscope_macros.vim
-	url = https://github.com/vim-scripts/cscope_macros.vim
+	url = git://github.com/vim-scripts/cscope_macros.vim
 [submodule "bundle/cscope_plus.vim"]
 	path = bundle/cscope_plus.vim
-	url = https://github.com/vim-scripts/cscope_plus.vim
+	url = git://github.com/vim-scripts/cscope_plus.vim
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
+	url = git://github.com/scrooloose/nerdtree.git
 [submodule "bundle/snipmate.vim"]
 	path = bundle/snipmate.vim
-	url = https://github.com/msanders/snipmate.vim.git
+	url = git://github.com/msanders/snipmate.vim.git
 [submodule "bundle/supertab"]
 	path = bundle/supertab
-	url = https://github.com/ervandew/supertab.git
+	url = git://github.com/ervandew/supertab.git
 [submodule "bundle/taglist.vim"]
 	path = bundle/taglist.vim
-	url = https://github.com/vim-scripts/taglist.vim.git
+	url = git://github.com/vim-scripts/taglist.vim.git
 [submodule "bundle/vim-afterimage"]
 	path = bundle/vim-afterimage
 	url = git://github.com/tpope/vim-afterimage.git
@@ -39,10 +39,10 @@
 	url = git://github.com/tpope/vim-bundler.git
 [submodule "bundle/vim-colors"]
 	path = bundle/vim-colors
-	url = https://github.com/mgutz/vim-colors.git
+	url = git://github.com/mgutz/vim-colors.git
 [submodule "bundle/vim-colors-solarized"]
 	path = bundle/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
+	url = git://github.com/altercation/vim-colors-solarized.git
 [submodule "bundle/vim-commentary"]
 	path = bundle/vim-commentary
 	url = git://github.com/tpope/vim-commentary.git
@@ -60,7 +60,7 @@
 	url = git://github.com/tpope/vim-haml.git
 [submodule "bundle/vim-l9"]
 	path = bundle/vim-l9
-	url = https://github.com/cfurrow/vim-l9.git
+	url = git://github.com/cfurrow/vim-l9.git
 [submodule "bundle/vim-markdown"]
 	path = bundle/vim-markdown
 	url = git://github.com/tpope/vim-markdown.git
@@ -81,10 +81,43 @@
 	url = git://github.com/tpope/vim-rvm.git
 [submodule "bundle/vim-shoulda"]
 	path = bundle/vim-shoulda
-	url = https://github.com/tsaleh/vim-shoulda.git
+	url = git://github.com/tsaleh/vim-shoulda.git
 [submodule "bundle/vim-surround"]
 	path = bundle/vim-surround
 	url = git://github.com/tpope/vim-surround.git
 [submodule "bundle/vim-vividchalk"]
 	path = bundle/vim-vividchalk
 	url = git://github.com/tpope/vim-vividchalk.git
+[submodule "bundle/vim-javascript"]
+	path = bundle/vim-javascript
+	url = git://github.com/pangloss/vim-javascript.git
+[submodule "bundle/textile.vim"]
+	path = bundle/textile.vim
+	url = git://github.com/timcharper/textile.vim.git
+[submodule "bundle/vim-rspec"]
+	path = bundle/vim-rspec
+	url = git://github.com/taq/vim-rspec.git
+[submodule "bundle/vim-align"]
+	path = bundle/vim-align
+	url = git://github.com/tsaleh/vim-align.git
+[submodule "bundle/vim-unimpaired"]
+	path = bundle/vim-unimpaired
+	url = git://github.com/tpope/vim-unimpaired.git
+[submodule "bundle/vim-irblack"]
+	path = bundle/vim-irblack
+	url = git://github.com/wgibbs/vim-irblack.git
+[submodule "bundle/vim-coffee-script"]
+	path = bundle/vim-coffee-script
+	url = git://github.com/kchmck/vim-coffee-script.git
+[submodule "bundle/syntastic"]
+	path = bundle/syntastic
+	url = git://github.com/scrooloose/syntastic.git
+[submodule "bundle/puppet-vim"]
+	path = bundle/puppet-vim
+	url = git://github.com/ajf/puppet-vim.git
+[submodule "bundle/gist-vim"]
+	path = bundle/gist-vim
+	url = git://github.com/mattn/gist-vim.git
+[submodule "bundle/vim-scala"]
+	path = bundle/vim-scala
+	url = git://github.com/bdd/vim-scala.git
